@@ -357,8 +357,20 @@ TIFFClientOpen(
 	 * Setup the byte order handling.
 	 */
 	if (tif->tif_header.tiff_magic != TIFF_BIGENDIAN &&
-	    tif->tif_header.tiff_magic != TIFF_LITTLEENDIAN) {
+	    tif->tif_header.tiff_magic != TIFF_LITTLEENDIAN
+#if MDI_SUPPORT
+	    &&
+#if HOST_BIGENDIAN
+	    tif->tif_header.tiff_magic != MDI_BIGENDIAN
+#else
+	    tif->tif_header.tiff_magic != MDI_LITTLEENDIAN
+#endif
+	    ) {
+		TIFFError(name,  "Not a TIFF or MDI file, bad magic number %d (0x%x)",
+#else
+	    ) {
 		TIFFError(name,  "Not a TIFF file, bad magic number %d (0x%x)",
+#endif
 		    tif->tif_header.tiff_magic,
 		    tif->tif_header.tiff_magic);
 		goto bad;
